gcc/testsuite/gm2/iso/fail/simpleforward4.mod
MODULE simpleforward4 ;


PROCEDURE foo () : CARDINAL ; FORWARD ;


PROCEDURE foo () ;
BEGIN
   RETURN 0
END foo ;


BEGIN
   IF foo () = 0
   THEN
   END
END simpleforward4.
